[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/helper/SeaHeightComponent.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/helper/SeaBalanceNode.gd" type="Script" id=2]

[node name="SeaBalanceNode" type="Spatial"]
script = ExtResource( 2 )

[node name="AnchorFrontRight" type="Spatial" parent="."]

[node name="AnchorFrontLeft" type="Spatial" parent="."]

[node name="AnchorBackLeft" type="Spatial" parent="."]

[node name="AnchorBackRight" type="Spatial" parent="."]

[node name="BobberFrontRight" parent="." instance=ExtResource( 1 )]

[node name="BobberFrontLeft" parent="." instance=ExtResource( 1 )]

[node name="BobberBackLeft" parent="." instance=ExtResource( 1 )]

[node name="BobberBackRight" parent="." instance=ExtResource( 1 )]
